# google-drive-connector

./: .env.example  .gitignore  README.md  databricks.yml  deploy.py  ingest.py  pyproject.toml  requirements.txt
src/notebooks/: ingest.py
src/setup/: create_connection.py
